# conversor-his

./: .gitignore  LICENSE  LICENSING.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/workflows/: ci.yml
config/: default.yaml
docs/: ARQUITETURA.md  CANARY_OUTPUT_LAYOUT.md  ROADMAP.md  convencoes_de_nomenclatura.md
legacy/: converter_para_md_windows.py
src/conversor_his/: __init__.py  batch.py  cli.py  conversor.py  converter.py  coordenadas.py  coordinates.py  diagnostic.py  diagnostico.py  fluxo_conversao.py  graphics.py  graphics_policy.py  linha_comando.py  lote.py  manifest.py  manifesto.py  map_visual.py  mapas.py  maps.py  modelos.py  models.py  normalizacao_texto.py  output_layout.py  packaging.py  pipeline_v072.py  raster_visual.py  reconstrucao_estrutural.py  tabelas.py  tables.py  text_normalization.py  visual_mapa.py  visual_raster.py  visual_tables.py
src/conversor_his/extractors/: __init__.py  docling_structured.py  pdf_native.py  pypdf_native.py
src/conversor_his/ocr/: __init__.py  base.py  quality.py  render.py  tesseract_engine.py
src/conversor_his/validation/: __init__.py  canary.py  metrics.py
tests/: test_api_portugues.py  test_batch.py  test_canary.py  test_coordinates.py  test_decorative_pages.py  test_docling_adapter.py  test_graphics_policy.py  test_map_visual.py  test_maps.py  test_metrics.py  test_ocr_quality.py  test_ocr_tokens.py  test_packaging.py  test_pdf_backend.py  test_raster_visual.py  test_reconstrucao_estrutural.py  test_repeated_graphics.py  test_tables.py  test_text_normalization.py  test_visual_tables.py
