[build-system]
requires=["hatchling>=1.25"]
build-backend="hatchling.build"

[project]
name="conversor-his"
version="0.2.1"
description="Conversao auditavel de legislacao municipal para Markdown estruturado"
readme="README.md"
requires-python=">=3.11"
license={text="MIT"}
authors=[{name="Projeto Protocolo HIS"}]
dependencies=["pypdf>=5.0","pypdfium2>=4.30","pydantic>=2.8","PyYAML>=6.0","typer>=0.12","rich>=13.7","python-docx>=1