[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"
[project]
name="conversor-his"
version="0.5.0"
requires-python=">=3.11"
dependencies=["pypdf>=5","pypdfium2>=4.30","pillow>=10","typer>=0.12","rich>=13"]
[project.optional-dependencies]
dev=["pytest>=8","ruff>=0.6"]
ocr=["pytesseract>=0.3.13"]
[project.scripts]
conversor-his="conversor_his.cli:app"
