[build-system]
requires=["setuptools>=68"]
build-backend="setuptools.build_meta"

[project]
name="conversor-his"
version="0.7.2"
requires-python=">=3.11"
dependencies=["pypdf>=5","pypdfium2>=4.30","pillow>=10","numpy>=2","opencv-python-headless>=4.10","typer>=0.12","rich>=13"]

[project.optional-dependencies]
dev=["pytest>=8","ruff>=0.6"]
ocr=["pytesseract>=0.3.13"]

[project.scripts]
conversor-his="conversor_his.cli:app"

[tool.ruff]
exclude=["legacy"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls=["typer.Argument","typer.Option"]

[tool.ruff.lint.per-file-ignores]
"src/conversor_his/batch.py"=["UP017"]
"src/conversor_his/graphics.py"=["BLE001"]
"src/conversor_his/manifest.py"=["UP017"]
"src/conversor_his/pipeline_v072.py"=["I001"]
"src/conversor_his/visual_tables.py"=["BLE001"]
